# Insidr

./: .gitignore  COMPLETE_CONTRACTS_SUMMARY.md  Config.toml  Makefile  README.md  README_PITCH.md  TESTNET_DEPLOYMENT.md  package-lock.json  package.json  transfer.sh
MoproAndroidBindings/uniffi/mopro/: mopro.kt
circuits/src/: bridge.nr
contracts/polkadot/: Cargo.toml  lib.rs  minimal.rs  polkadot_bridge_complete.rs
contracts/polkadot_minimal/: Cargo.toml  lib.rs
contracts/stellar/: Cargo.toml  SimpleEscrow.rs  StellarBridgeEscrow.rs  minimal_test.rs  stellar_bridge_complete.rs  test.rs
flutter/integration_test/: plugin_integration_test.dart
flutter/lib/: bridge_demo_page.dart  bridge_demo_service.dart  bridge_page.dart  bridge_service.dart  main.dart  testnet_bridge_service.dart  testnet_demo_page.dart
scripts/: deploy_polkadot.sh  deploy_polkadot_complete.sh  deploy_polkadot_local.sh  deploy_stellar.sh  deploy_stellar_complete.sh  generate_polkadot_account.js
src/: lib.rs
