[package]
name = "polkadot_bridge_verifier"
version = "0.1.0"
edition = "2021"
authors = ["PrivatePay Team"]
description = "ZK Proof Verifier for PrivatePay Bridge on Polkadot"

[dependencies]
ink = { version = "5.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.10", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { version = "5.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
