[package]
name = "stellar-bridge-escrow"
version = "0.1.0"
edition = "2021"
authors = ["PrivatePay Team"]
description = "Soroban Escrow Contract for PrivatePay Bridge"

[lib]
crate-type = ["cdylib"]
path = "minimal_test.rs"

[dependencies]
soroban-sdk = { version = "21.0.0" }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
